@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/flaggie
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/flaggie/ChangeLog,v 1.15 2011/01/15 13:06:12 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/flaggie/ChangeLog,v 1.16 2011/01/16 14:25:19 mgorny Exp $
+
+  16 Jan 2011; Michał Górny <mgorny@gentoo.org> flaggie-0.0.4.ebuild,
+  flaggie-0.1.ebuild:
+  Add missing app-shells/gentoo-bashcomp RDEP for bash-completion. Thanks to
+  Jacek Sowiński.
 
 *flaggie-0.1 (15 Jan 2011)
 
